# hesper

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVLOG.md  DEVPLAN.md  Dockerfile  Hesper.lean  LICENSE  METAL_REPLACER_INTEGRATION.md  MOE_INDEXED_DESIGN.md  MainDebugF16.lean  MainSimd.lean  MainSimdBench.lean  MainSimdDebug.lean  MainSimdMinimal.lean  MainSimdPerfBench.lean  PERF_AUTOTUNE_LOOP.md  README.md  WGSL_CODEGEN_OPTIMIZATION.md  lake-manifest.json  lakefile.lean  lakefile.toml  shell.nix  tmp_compare_dumps.py  tmp_inspect_vocab.py
.github/workflows/: ci.yml  docker-image.yml  pages.yml  tutorial-check.yml
Bench/: GpuFixedCost.lean  MicroBenchmark.lean
Benchmarks/: Performance.lean
Examples/: ADDebug.lean  ADDemo.lean  ADProof.lean  AsyncDemo.lean  AtomicCounter.lean  BitNetCUDA.lean  BitNetComplete.lean  BitNetInference.lean  BitNetTTT_MQAR.lean  BitNetTTT_Needle.lean  BitNetTextGeneration.lean  CUDAGraphSmoke.lean  ChromeTracingDemo.lean  DiffusionGemmaBidir.lean  DiffusionGemmaDecode.lean  DiffusionGemmaForward.lean  DiffusionGemmaForwardGPU.lean  DiffusionGemmaForwardProbe.lean  DiffusionGemmaLoad.lean  DiffusionGemmaTinyTest.lean  DiffusionGemmaValidation.lean  FlashAttnShaderDump.lean  GLFWDemo.lean  GLFWSimple.lean  GLFWTriangle.lean  Gemma4AllLayersDump.lean  Gemma4CUDA.lean  Gemma4EmbdTest.lean  Gemma4Inference.lean  Gemma4Layer0Dump.lean  Gemma4Layer0Forward.lean  Gemma4Layer5Dump.lean  Gemma4LlamaPrefillSkeleton.lean  Gemma4LlamaSkeleton.lean  Gemma4Pos1Dump.lean  Gemma4Profile.lean  Gemma4StubDecodeBench.lean  Gemma4Validation.lean  KernelFusion.lean  LoadGGUF.lean  (+14 more)
Examples/BitNet/: InferenceDemo.lean
Examples/Compute/: AsyncDemo.lean  BufferCoherencyTest.lean  ExecuteDemo.lean  GroupedDownTest.lean  Main.lean  MainMatmul.lean  MainMatmul4K.lean  MainMatmulSimple.lean  MainMatmulSubgroupM.lean  MainSimple.lean  MatmulBench.lean  MetalReplaceTest.lean  MslPoc.lean  ParallelDemo.lean  SubgroupMatrixF16Probe.lean  TestSubgroupShader.lean  WMMA8x8Test.lean
Examples/DSL/: AtomicCounter.lean  CircuitIRv2PoC.lean  CodeGenDemo.lean  DSLBasics.lean  DiffusionGemmaAttnParity.lean  DiffusionGemmaBatchAttnParity.lean  DiffusionGemmaGPUParity.lean  DiffusionGemmaGQAAttnTest.lean  DiffusionGemmaGeGLUParity.lean  DiffusionGemmaMatMulParity.lean  DiffusionGemmaQ4KBatchParity.lean  DiffusionGemmaQ4KExpertParity.lean  DiffusionGemmaQ6KMMParity.lean  DiffusionGemmaQ8BatchParity.lean  DiffusionGemmaQ8ExpertParity.lean  DiffusionGemmaQ8MMParity.lean  DiffusionGemmaQKNormRopeParity.lean  DiffusionGemmaRMSNormParity.lean  DiffusionGemmaRoPEParity.lean  DiffusionGemmaSoftcapGPUParity.lean  DiffusionGemmaSoftcapParity.lean  DiffusionGemmaSoftmaxParity.lean  Gemma4DispatchCount.lean  Gemma4FFNParity.lean  Gemma4KVWriteMultiParity.lean  Gemma4KVWriteParity.lean  Gemma4KWriteParity.lean  Gemma4MonolithLayerParity.lean  Gemma4MonolithTPS.lean  Gemma4PostFFNParity.lean  Gemma4Q4KMMQParity.lean  Gemma4QKVProjParity.lean  Gemma4QProjParity.lean  Gemma4RopeQParity.lean  MatmulSubgroup.lean  MonadDemo.lean  NeuralNetFusion.lean  OperatorLibrary.lean  UnifiedADDemo.lean  VerifiedOpDemo.lean
Examples/Graphics/: GLFWTriangle.lean
Examples/MachineLearning/: MNISTData.lean  MNISTTrain.lean  MNISTTrainFused.lean  MNISTTrainGPU.lean  MNISTTrainGPUBackprop.lean  MNISTTrainGPUFull.lean
Examples/SIMD/: MainDebugConversion.lean  MainMultiPrecision.lean  MainSimdSimple.lean  MainSimdTest.lean
Examples/Tests/: GPURoundtrip.lean  OpaqueArrayTest.lean  RMSNorm_Test.lean  SimpleWrite.lean  TQ2_0_Test.lean  TestAdamGPU.lean  (+3 more)
Hesper/: Async.lean  Backend.lean  Basic.lean  Compute.lean  Float16.lean  Float32.lean  GGUF.lean  GLFW.lean  Logging.lean  Profile.lean  Simd.lean
Tests/: All.lean  BackwardVerification.lean  BitLinearBench.lean  BitLinearEquivalence.lean  BitNetValidation.lean  BufferTest.lean  BufferTests.lean  BufferTestsMain.lean  ChainCompletenessTest.lean  ComputeTests.lean  ComputeTestsMain.lean  DeviceTests.lean  DeviceTestsMain.lean  EmbeddingTest.lean  ErrorHandling.lean  ErrorHandlingMain.lean  FFIBoundaryTests.lean  FlashAttentionTest.lean  FusionTest.lean  GPUAccuracyTests.lean  GPUAccuracyTestsMain.lean  GPUvsCPUBackwardTest.lean  I2S_Validation.lean  MinimalBenchmark.lean  MinimalBindGroupTest.lean  NumericalTests.lean  NumericalTestsMain.lean  ParseFloatSpec.lean  RMSNormBackwardGPUTest.lean  SavedActivationTest.lean  ShaderMonadTests.lean  ShaderMonadTestsMain.lean  SmallEmbeddingTest.lean  SubgroupFallbackTests.lean  UnitTests.lean  VerifiedAD.lean  WGSLDSLTests.lean  WGSLDSLTestsMain.lean  WMMAMatMulBench.lean  WMMAMatMulEquiv.lean  (+1 more)
c_src/: CMakeLists.txt  simd_ops.cpp  simd_ops_highway.cpp  simd_ops_highway.h
data/: alpaca_facts.json  alpaca_test.json
docs/: ANATOMY_OF_DECODE_REPORT.md  BACKWARD_COMPLETENESS.md  LORA_FINETUNING.md  MODEL_SURGERY_CAMPAIGNS.md  NEXT_ARCHITECTURE_PLAYBOOK.md  STATUS.md  VERIFIED_AD.md  circuit-dsl-design.md  circuit-dsl-mvp-findings.md  circuit-dsl-todos.md  circuit-dsl-tutorial.md  fusion-graph-dsl-design.md  gemma4-kernel-tests.md  kernel-count-kpi.md  llama-metal-dispatch-analysis.md  matmul-microbench-findings.md  model-implementation-guide.md  profiling-guide.md  quant-dsl-proposal.md  shaderm-cuda-gap-v11.md  shaderm-cuda-mapping.md  ttt-architecture.md  v11-debug-progress.md
native/: .gitignore  CMakeLists.txt  bridge.cpp  bridge_wasm_stub.cpp  cuda_bridge.cpp  cuda_bridge_stub.c  cuda_bridge_stub.cpp  glfw_bridge.cpp  metal_replace.mm  metal_replace_stub.cpp
native/cmake/: libcxx-toolchain.cmake
native/wasm/: build-libhesper-wasm.sh  build-wasm.sh  lakefile-wasm.lean
scripts/: compare_all_layers.py  compare_layer0.py  compare_layer5.py  compare_pos1.py  dg_eval.sh  dump_embedding.py  dump_llama_layer0.sh  dump_llama_pos01.sh  generate_gemma4_golden.py  inspect_qproj.py  inspect_step.py  kernel_bench.sh  kernel_compare.py  kernel_compare_graphs.py  nsys_to_chrome.py  nsys_to_chrome_trace.py  perf_compare.sh  regression.sh
tune/: tune_log.csv  tune_log_v0.csv  winners.csv
(+493 files in other folders)
